# nixos-configs

./: .gitignore  CLAUDE.md  README.md  alacritty.toml  alacritty.yml  claude-notify-handler  claude-notify-permission  claude-notify-permission-test.fish  claude-notify-stop  claude-notify.fish  claude-settings.json  common.nix  dim-screen.nix  elgato-keylight.py  fix_ntong_auth_with_influxdb2.fish  flake.nix  focus-urgent.sh  fourmolu.yaml  i3.conf  in_vpn.fish  krusader.color  onedark.rasi  openSecrets.py  prettyLock.nix  regenerate_tailscale_certificate.fish  selectSink.fish  set_up_services.fish  sway.conf  swaync.conf  swaync.css  termite.conf  vscode_extensions.txt  vscode_install_extensions.fish  vscode_save_extensions.fish
certificates/: iron.cache.public-key.pem  iron.monero.cert.pem
claude/: CLAUDE.md  settings.json
hosts/: iron.nix  kevlar.nix  mercury.nix  silk.nix  tin.nix  titanium.nix  tungsten.nix
machines/: iron.nix  mercury.nix  tin.nix  tungsten.nix
mixins/: always-on.nix  amd.nix  bare-metal.nix  buildkite.nix  core.nix  ecc.nix  frigate.nix  gui.nix  home-assistant.nix  home_assistant.nix  intel.nix  mullvad.nix  neurasium.nix  on-battery.nix  palette.nix  router.nft  router.nix  trusted.nix  untrusted.nix  virtualization.nix  zfs.nix
modules/: auto-unlock.nix  brightness.nix  core.nix  dunst.nix  gui.nix  home.nix  i3status-rust.nix  initrd-network-access.nix  initrd-tailscale.nix  journal-brief.nix  (+8 more)
tools/claude-permission-hook/: claude-permission-hook.cabal  test.sh
tools/claude-permission-hook/src/: DSL.hs  Main.hs  Rules.hs  Shell.hs
(+48 files in other folders)
